syntax = "proto3";

import "teletype-crdt.proto";

message DM {
  oneof variant {
    bool user_id_request = 1;
    UserIdResponse user_id_response = 2;
    bool create_portal_request = 3;
    CreatePortalResponse create_portal_response = 4;
    JoinPortalRequest join_portal_request = 5;
    JoinPortalResponse join_portal_response = 6;
    Notification notification = 7;
    Request request = 8;
    Response response = 9;
    Portal portal = 10;
    Channel channel = 11;
  }

  message UserIdResponse {
    string user_id = 1;
  }

  message CreatePortalResponse {
    string portal_id = 1;
  }

  message JoinPortalRequest {
    string remote_id = 1;
    string host_id = 2;
    string portal_id = 3;
  }

  message JoinPortalResponse {
    bool success = 1;
  }

  message Host {
    string portal_id = 1;
    string user_id = 2;
  }

  message Notification {
    string sender_id = 1;
    string channel_id = 2;
    Host host = 3;
    bytes body = 4;
  }

  message Request {
    string sender_id = 1;
    Host host = 2;
    string channel_id = 3;
    uint32 request_id = 4;
    bytes body = 5;
  }

  message Response {
    string recipient_id = 1;
    uint32 request_id = 2;
    bool ok = 3;
    bytes body = 4;
  }

  message Portal {
    oneof variant {
      SubscriptionResponse subscription_response = 1;
      Tether tether = 2;
      BufferProxy buffer_proxy = 3;
      EditorProxy editor_proxy = 4;
      EditorProxyMetadata editor_proxy_metadata = 5;
      Update update = 6;
    }

    message SubscriptionResponse {
      map<string, uint32> site_ids_by_peer_id = 1;
      repeated Tether tethers = 2;
      repeated BufferProxy active_buffer_proxies = 3;
      repeated EditorProxy active_editor_proxies = 4;
      map<uint32, uint32> active_editor_proxy_ids_by_site_id = 5;
      repeated EditorProxyMetadata editor_proxies_metadata = 6;
    }

    message Tether {
      uint32 follower_site_id = 1;
      uint32 leader_site_id = 2;
      uint32 state = 3;
    }

    message BufferProxy {
      uint32 id = 1;
      string uri = 2;
      repeated Operation operations = 3;
    }

    message EditorProxy {
      uint32 id = 1;
      uint32 buffer_proxy_id = 2;
      map<uint32, uint32> selection_layer_ids_by_site_id = 3;
    }

    message EditorProxyMetadata {
      uint32 id = 1;
      uint32 buffer_proxy_id = 2;
      string buffer_proxy_uri = 3;
    }

    message Update {
      oneof variant {
        SiteAssignment site_assignment = 1;
        EditorProxySwitch editor_proxy_switch = 2;
        EditorProxyRemoval editor_proxy_removal = 3;
        EditorProxyCreation editor_proxy_creation = 4;
        Operations operations = 5;
        Uri uri = 6;
        Tether tether = 7;
        Selections selections = 8;
      }

      message SiteAssignment {
        string peer_id = 1;
        uint32 site_id = 2;
      }

      message EditorProxySwitch {
        uint32 editor_proxy_id = 1;
      }

      message EditorProxyRemoval {
        uint32 editor_proxy_id = 1;
      }

      message EditorProxyCreation {
        EditorProxyMetadata editor_proxy_metadata = 1;
      }

      message Operations {
          repeated Operation operations = 1;
      }

      message Uri {
          string uri = 1;
      }

      message Selections {
        map<uint32, uint32> selection_layer_ids_by_site_id = 1;
      }
    }
  }

  message Channel {
    bool join = 1;
    bool leave = 2;
    bool close = 3;
    string portal_id = 4;
    string channel_id = 5;
    string host_id = 6;
  }
}
